--- a/abstracts.qmd
+++ b/abstracts.qmd
@@ -3,24 +3,6 @@ toc: true
 toc-location: right
 ---
 
-## Cyto 2025 - Single Colors - P299
-
-**“Well, how bright does it need to be?”: Investigating the interplay of fluorescent signature and brightness in single-color unmixing controls.**
-
-David Rach1, Kirsten E. Lyke2, Cristiana Cairo3
-
-*1 Molecular Microbiology and Immunology Graduate Program, University of Maryland School of Medicine, Baltimore, USA 2 Center for Vaccine Development and Global Health, University of Maryland School of Medicine, Baltimore, USA 3 Department of Microbiology and Immunology, University of Maryland School of Medicine, Baltimore, MD, United States.*
-
-Spectral flow cytometry (SFC), with its capacity to resolve similar fluorophores and ability to rapidly acquire large number of events, enables more comprehensive phenotypic and functional analyses than conventional flow cytometry. Unmixing controls (both single-color and unstained) are critical for proper unmixing of high-dimensional panels, as their fluorescence signatures provision the reference matrix. 
-
-Discrepancies between the fluorescence signatures of unmixing controls and full-stained samples add uncertainty to the unmixing calculationsand can lead to loss of resolution for individual fluorophores, (particularly in large panels with broader co-expression of markers) producing batch effects. 
- 
-These batch effects can affect performance, increase complexity, and impact reproducibility of unsupervised analysis methods that rely on median fluorescent intensity (MFI) for clustering, dimensionality visualization and normalization. While previous efforts at quality control have focused on factors related to instruments and/or full-stained samples, few tools exist to evaluate unmixing controls despite their critical importance. At the same time, the criteria for delineating a good unmixing control and re-using previous controls without affecting the unmixing remain loosely defined. 
- 
-We therefore set out to quantitatively assess how variation in the fluorescence signature and/or brightness of controls impacts unmixing of full-stained samples. To this end, we have been working on an R package called Luciernaga, which includes a collection of tools for quality control and fluorescence signature profiling of unmixing controls. Leveraging its ability to characterize normalized fluorescence signatures for individual cells, we grouped and quantified, in every unmixing control, cells with similar signatures across 20 experiments. In the process, we identified “variant” signatures indicative of tandem degradation and non-specific binding of decoupled fluorophores associated with specific unmixing issues. We then grouped cells with shared variant signatures in each unmixing control and used them to generate a .fcs file containing a single variant signature. Keeping all unmixing controls but one constant, we swapped in a variant signature at a time, performing iterative unmixing in R with ordinary least squares. This process allowed us to characterize how variations in fluorescence signature, brightness, or both factors impact the unmixing of the full-stained sample. Our work builds on fluorescence signature, brightness, or both factors impact the unmixing of the full-stained sample. 
-
-Our work builds on the existing guidelines for good unmixing controls, while providing mechanistic explanations for each. We also highlight advantages of profiling control signatures before performing unmixing as a means to mitigate unmixing issues.
-
 ## Cyto 2025 - Autofluorescence - P267
 
 **"Are these autofluorescences in the room with us right now?” Quantifying impact of autofluorescence variation on unmixing**
@@ -35,88 +17,64 @@ Autofluorescence, especially in context of human cord and peripheral mononuclear
 
 We set out to quantitatively interrogate at which point differences in autofluorescence signatures within human mononuclear cells begin to impact panel resolution. Using our R package Luciernaga, we profiled autofluorescence signatures in more than 150 cryopreserved CBMC and PBMC specimens, treated with different activation conditions and with different fixatives. For each .fcs file, we quantified the normalized signatures of individual cells, grouped and enumerated cells based on shared signatures, and visualized the data across specimens and treatments. Since we had samples stained with complex panels matching many of the unstained controls, we used autofluorescence signatures isolated from the unstained controls to iteratively unmix the samples in R, employing ordinary least squares to evaluate the effect these signatures had upon unmixing.
 
-We found that the majority of the autofluorescence signatures within human mononuclear cells acquired on a 5-laser Cytek Aurora® share a common primary peak (typically on detector V7). Variation in the relative height of the second and third peak (typically UV7 and B3, respectively) was noted between CBMC and PBMC, as well as treatment conditions. A degree of variation in the height of the second and third peak was tolerated without impacting the unmixing. This pattern held true for rare “variant” signatures that did not have a primary peak on V7, as long as they shared the same primary peak. These variant signatures were different enough to cause unmixing errors when present in >1% of PBMC, explaining unmixing issues we previously encountered. 
+We found that the majority of the autofluorescence signatures within human mononuclear cells acquired on a 5-laser Cytek Aurora® share a common primary peak (typically on detector V7). Variation in the relative height of the second and third peak (typically UV7 and B3, respectively) was noted between CBMC and PBMC, as well as treatment conditions. A degree of variation in the height of the second and third peak was tolerated without impacting the unmixing. This pattern held true for rare “variant” signatures that did not have a primary peak on V7, as long as they shared the same primary peak. These variant signatures were different enough to cause unmixing errors when present in \>1% of PBMC, explaining unmixing issues we previously encountered.
 
-Our work highlights variation in autofluorescence signatures within human CBMC and PBMC cells activated with different stimuli, and established thresholds at which we observe impacts on the effect that unmixing controls had on resolving complex SFC panels. We provide a method by which shared variant autofluorescence signatures can be isolated and highlight the importance 
+Our work highlights variation in autofluorescence signatures within human CBMC and PBMC cells activated with different
+stimuli, and established thresholds at which we observe impacts on the effect that unmixing controls had on resolving complex SFC panels. We provide a method by which shared variant autofluorescence signatures can be isolated and highlight the importance of collecting sufficient unstained cells to profile rarer variation in autofluorescence that might otherwise be missed.
 
-# 10th International γδ T cell Conference - P55
+## Cyto 2025 - Single Colors - P299
+
+**“Well, how bright does it need to be?”: Investigating the interplay of fluorescent signature and brightness in single-color unmixing controls.**
+
+David Rach1, Kirsten E. Lyke2, Cristiana Cairo3
+
+*1 Molecular Microbiology and Immunology Graduate Program, University of Maryland School of Medicine, Baltimore, USA 2 Center for Vaccine Development and Global Health, University of Maryland School of Medicine, Baltimore, USA 3 Department of Microbiology and Immunology, University of Maryland School of Medicine, Baltimore, MD, United States.*
+
+Spectral flow cytometry (SFC), with its capacity to resolve similar fluorophores and ability to rapidly acquire large number of events, enables more comprehensive phenotypic and functional analyses than conventional flow cytometry. Unmixing controls (both single-color and unstained) are critical for proper unmixing of high-dimensional panels, as their fluorescence signatures provision the reference matrix. Discrepancies between the fluorescence signatures of unmixing controls and full-stained samples add uncertainty to the unmixing calculations and can lead to loss of resolution for individual fluorophores, (particularly in large panels with broader co-expression of markers) producing batch effects.
+
+These batch effects can affect performance, increase complexity, and impact reproducibility of unsupervised analysis methods that rely on median fluorescent intensity (MFI) for clustering, dimensionality visualization and normalization. While previous efforts at quality control have focused on factors related to instruments and/or full-stained samples, few tools exist to evaluate unmixing controls despite their critical importance. At the same time, the criteria for delineating a good unmixing control and re-using previous controls without affecting the unmixing remain loosely defined.
+
+We therefore set out to quantitatively assess how variation in the fluorescence signature and/or brightness of controls impacts unmixing of full-stained samples. To this end, we have been working on an R package called Luciernaga, which includes a collection of tools for quality control and fluorescence signature profiling of unmixing controls. Leveraging its ability to characterize normalized fluorescence signatures for individual cells, we grouped and quantified, in every unmixing control, cells with similar signatures across 20 experiments. In the process, we identified “variant” signatures indicative of tandem degradation and non-specific binding of decoupled fluorophores associated with specific unmixing issues. We then grouped cells with shared variant signatures in each unmixing control and used them to generate a .fcs file containing a single variant signature. Keeping all unmixing controls but one constant, we swapped in a variant signature at a time, performing iterative unmixing in R with ordinary least squares. This process allowed us to characterize how variations in fluorescence signature, brightness, or both factors impact the unmixing of the full-stained sample. Our work builds on fluorescence signature, brightness, or both factors impact the unmixing of the full-stained sample.
+
+Our work builds on the existing guidelines for good unmixing controls, while providing mechanistic explanations for each. We also highlight advantages of profiling control signatures before performing unmixing as a means to mitigate unmixing issues.
+
+# Cyto 2025 - MFI Drift After QC - P310
+
+**"“Wait, when was QC last run???” Evaluating MFI drift after morning QC and its impact on unmixing."**
+
+David Rach1, Mikayla Trainor2, Natarajan Ayithan2, Xiaoxuan Fan2
+
+*1 Molecular Microbiology and Immunology Graduate Program, University of Maryland School of Medicine, Baltimore, USA 2 Flow Cytometry Shared Resource, University of Maryland Greenebaum Comprehensive Cancer Center, Baltimore, USA*
+
+At our core, quality control (QC) beads are run daily on Cytek Aurora instruments as part of the instrument startup process. Based on the beads initial observed MFI values for each detector, the SpectroFlo software adjusts the gains and laser settings of the instrument to ensure that the after-QC MFI values match lot-specific thresholds. This accounts for instrumental changes, allowing specimens acquired on different days to be comparable, and reducing the frequency of MFI-based batch effects in large spectral flow cytometry panels. We recently implemented a website to monitor daily QC for our instruments at our core <https://umgccfcss.github.io/InstrumentQC/>, visualizing longitudinal changes in gain, RCV, and bead MFI values before and after daily QC. In the process, we observed various detectors for which MFI values pre-QC were consistently different from the MFI values observed after QC the day before. While MFI was reset to baseline at the following QC, we were curious whether these observed MFI drifts would have already occurred by the evening before, or were a result of the instrument shutdown. Additionally, we wanted to evaluate whether these drifts were sufficient to impact unmixing when samples were acquired in the evening compared to shortly after morning QC.
+
+To evaluate this, we acquired 5000 SpectroFlo QC beads as fcs files, i) before morning QC, ii) after morning QC, iii) before evening QC, and iv) after evening QC. These samples were acquired on a 3, 4, and 5-laser Aurora over a several month period, for both the 2005 and 2006 SpectroFlo QC bead lots. For analysis, acquired FCS files were imported to R, singlet beads gated, and gate placement validated using the flowWorkspace, openCyto and Luciernaga R packages. From the gated events, median MFI and RCV values were calculated for each detector, and voltage/gain metadata for individual .fcs files was retrieved using the Luciernaga package. We then visualized this data in R using various tidyverse packages. We observed that for most detectors, there were limited changes in MFI values between the After Morning QC and Before Evening QC timepoints. However, we noted consistent and significant shifts in MFI for a few detectors by the time of evening QC, notably the YG2, YG3, and R1 detectors. To evaluate whether these observed drifts in MFI would have altered normalized fluorescent signature, we simulated the equivalent day-specific adjustment to reference signatures of over 100 fluorophores, plotting the adjusted signatures against the original reference signature. We observed that the drift in the handful of detectors did not significantly alter the normalized fluorescent spectra of the fluorophore, with exception of a few fluorophores where the detector in question landed on the secondary peak of the spectra. When evaluating the signatures by their cosine value, the differences were within range we would anticipate limited impact on unmixing.
+
+Finally using the same approach, we adjusted raw reference controls and full-stained samples acquired following morning QC and imported into SpectroFlo for unmixing. We did not observe any major changes to the unmixing in medium-sized panels. In summary, for the instruments at our core, the majority of detector MFI values remain stable following morning QC. Additionally, for the few detectors that did consistently shift, based on both simulated and experimental data, the observed changes would have minimal impact for most fluorophores signatures and subsequent unmixing. Whether these observed small changes are enough to affect unmixing in large panels (40+) colors remains an area that merits further investigation.
+
+# 10th International γδ T cell Conference 2023 - P55
 
 **Vγ9Vδ2 T cell responses in HIV‑exposed Uninfected (HEU) Infants**
 
 David Rach1, Hao-Ting Hsu2, Nginache Nampota3, Godfrey Mvula3, Felix A. Mkandawire3, Osward M. Nyirenda3, Bernadette Hritzo1, Ingrid Peterson4, Franklin R Toapanta4, Marcelo B Sztein4, Miriam Laufer4, Kirsten E. Lyke4, Cristiana Cairo2
 
-*1Molecular Microbiology and Immunology Graduate Program, University of Maryland School of Medicine, Baltimore, USA. 2Institute
-of Human Virology, University of Maryland School of Medicine, Baltimore, USA. 3Blantyre Malaria Project, Kamuzu University of
-Health Sciences, Blantyre, Malawi. 4Center for Vaccine Development and Global Health, University of Maryland School of Medicine,
-Baltimore, USA*
+*1Molecular Microbiology and Immunology Graduate Program, University of Maryland School of Medicine, Baltimore, USA. 2Institute of Human Virology, University of Maryland School of Medicine, Baltimore, USA. 3Blantyre Malaria Project, Kamuzu University of Health Sciences, Blantyre, Malawi. 4Center for Vaccine Development and Global Health, University of Maryland School of Medicine, Baltimore, USA*
 
-Maternal antiretroviral therapy (ART) effectively prevents perinatal infection of infants born to HIV+ women. However, during the first six months of life HIV-exposed, uninfected (HEU) infants exhibit increased infectious morbidity compared to HIV unexposed (HU) infants. Dysfunction of the infant immune system, driven directly or indirectly by prenatal HIV/ART exposure, is thought to contribute to this outcome. Vγ9Vδ2 T (Vδ2) cells, with their ability to rapidly release Th1 cytokines and respond to IL-23, are likely to play a key role against pathogens in early life. Due to elevated inflammation at the fetal-maternal interface, Vδ2 cells, which are sensitive to inflammatory cytokines, may be dysfunctional in HEU infants. This issue, however, has not been investigated. We are analyzing a well-characterized Malawian infant cohort, comparing infants born to
-women with: A) ART-treated HIV infection, with undetectable viral load since before conception (HEU-lo); B) HIV infection diagnosed and treated at mid-gestation or later, with high viral load at enrollment (HEU-hi); C) no HIV infection (HU). We are employing conventional and spectral flow cytometry for a detailed assessment of cord blood Vδ2 cells.Ex vivo, we observed an increased frequency of Vδ2 cells in cord blood of HEU-hi
-infants compared to HU infants. Following short polyclonal stimulation, the frequency of Vδ2 cells producing IFNγ, or both INFγ and TNFα was only significantly elevated in HEU-lo infants. TCR-mediated restimulation of Vδ2 cells resulted in lower frequency of Th1 cytokine producing cells and CD107a+ cells in HEU-hi infants after expansion with BCG, but not after expansion with Zoledronate. Results for our Malawian neonates confirm elevated Vδ2 cell frequencies in the cord blood of HEU infants, which we previously
-observed in a Nigerian cohort.To optimize the use of precious clinical specimens and extend the analyses to the other human innate-like subsets, we designed a 29-color spectral flow cytometry panel that enables a comprehensive profiling of Vδ2 T, MAIT and NKT cells. The direct comparison of conventional and spectral data for Vδ2 cells will help validate the performance of large spectral flow cytometry panels to highlight the impact of HIV prenatal exposure on these rare subsets. 
+Maternal antiretroviral therapy (ART) effectively prevents perinatal infection of infants born to HIV+ women. However, during the first six months of life HIV-exposed, uninfected (HEU) infants exhibit increased infectious morbidity compared to HIV unexposed (HU) infants. Dysfunction of the infant immune system, driven directly or indirectly by prenatal HIV/ART exposure, is thought to contribute to this outcome. Vγ9Vδ2 T (Vδ2) cells, with their ability to rapidly release Th1 cytokines and respond to IL-23, are likely to play a key role against pathogens in early life. Due to elevated inflammation at the fetal-maternal interface, Vδ2 cells, which are sensitive to inflammatory cytokines, may be dysfunctional in HEU infants. This issue, however, has not been investigated. We are analyzing a well-characterized Malawian infant cohort, comparing infants born to women with: A) ART-treated HIV infection, with undetectable viral load since before conception (HEU-lo); B) HIV infection diagnosed and treated at mid-gestation or later, with high viral load at enrollment (HEU-hi); C) no HIV infection (HU). We are employing conventional and spectral flow cytometry for a detailed assessment of cord blood Vδ2 cells.Ex vivo, we observed an increased frequency of Vδ2 cells in cord blood of HEU-hi infants compared to HU infants. Following short polyclonal stimulation, the frequency of Vδ2 cells producing IFNγ, or both INFγ and TNFα was only significantly elevated in HEU-lo infants. TCR-mediated restimulation of Vδ2 cells resulted in lower frequency of Th1 cytokine producing cells and CD107a+ cells in HEU-hi infants after expansion with BCG, but not after expansion with Zoledronate. Results for our Malawian neonates confirm elevated Vδ2 cell frequencies in the cord blood of HEU infants, which we previously observed in a Nigerian cohort.To optimize the use of precious clinical specimens and extend the analyses to the other human innate-like subsets, we designed a 29-color spectral flow cytometry panel that enables a comprehensive profiling of Vδ2 T, MAIT and NKT cells. The direct comparison of conventional and spectral data for Vδ2 cells will help validate the performance of large spectral flow cytometry panels to highlight the impact of HIV prenatal exposure on these rare subsets.
 
 # Cyto 2023 - P195
 
 **Spectral flow cytometry analysis of Innate-like T cell responses in Malawian HIV-exposed Uninfected (HEU) Infants.**
 
-David Rach1, Hao-Ting Hsu2, Nginache Nampota3, Godfrey Mvula3, Felix A. Mkandawire3, Osward M. Nyirenda3, Ingrid Peterson4, Franklin R.
-Toapanta4, Marcelo B. Sztein4, Miriam Laufer4, Kirsten E. Lyke4,
-Cristiana Cairo2
+David Rach1, Hao-Ting Hsu2, Nginache Nampota3, Godfrey Mvula3, Felix A. Mkandawire3, Osward M. Nyirenda3, Ingrid Peterson4, Franklin R. Toapanta4, Marcelo B. Sztein4, Miriam Laufer4, Kirsten E. Lyke4, Cristiana Cairo2
 
-*1 Molecular Microbiology and Immunology Graduate Program, University
-of Maryland School of Medicine, Baltimore, USA. 2 Institute of Human
-Virology, University of Maryland School of Medicine, Baltimore, USA.
-3 Blantyre Malaria Project, Kamuzu University of Health Sciences,
-Blantyre, Malawi. 4 Center for Vaccine Development and Global Health,
-University of Maryland School of Medicine, Baltimore, USA*
+*1 Molecular Microbiology and Immunology Graduate Program, University of Maryland School of Medicine, Baltimore, USA. 2 Institute of Human Virology, University of Maryland School of Medicine, Baltimore, USA. 3 Blantyre Malaria Project, Kamuzu University of Health Sciences, Blantyre, Malawi. 4 Center for Vaccine Development and Global Health, University of Maryland School of Medicine, Baltimore, USA*
 
-Maternal antiretroviral therapy (ART) effectively prevents perinatal
-infection of infants born to HIV+ women. However, during the
-first six months of life HIV-exposed, uninfected (HEU) infants
-exhibit increased morbidity due to lower respiratory tract and
-diarrheal infections, compared to HIV unexposed (HU) infants. It is
-hypothesized that exposure to HIV and/or ART before birth perturbs
-the developing fetal immune system, which contributes to the
-increased infectious morbidity seen in HEU infants. The specific
-immunological mechanisms underlying this clinical outcome are still
-under investigation. To help understand the contribution of maternal
-viremia to infant immune perturbation, we are analyzing a cohort
-of Malawian infants with well-characterized prenatal HIV-exposure.
-Specifically, we are comparing three groups of infants born to women
-with: A) ART-treated HIV infection and undetectable viral load since
-before conception and through pregnancy (HEU-lo); B) HIV infection
-diagnosed and treated at mid-gestation or later, with high viral load at
-enrollment (HEU-hi); C) no HIV infection (HU).
+Maternal antiretroviral therapy (ART) effectively prevents perinatal infection of infants born to HIV+ women. However, during the first six months of life HIV-exposed, uninfected (HEU) infants exhibit increased morbidity due to lower respiratory tract and diarrheal infections, compared to HIV unexposed (HU) infants. It is hypothesized that exposure to HIV and/or ART before birth perturbs the developing fetal immune system, which contributes to the increased infectious morbidity seen in HEU infants. The specific immunological mechanisms underlying this clinical outcome are still under investigation. To help understand the contribution of maternal viremia to infant immune perturbation, we are analyzing a cohort of Malawian infants with well-characterized prenatal HIV-exposure. Specifically, we are comparing three groups of infants born to women with: A) ART-treated HIV infection and undetectable viral load since before conception and through pregnancy (HEU-lo); B) HIV infection diagnosed and treated at mid-gestation or later, with high viral load at enrollment (HEU-hi); C) no HIV infection (HU).
 
-Innate-like T cells (ILTs), including Natural Killer T cells (NKTs),
-Mucosal-associated Invariant T cells (MAITs), and Vg9Vd2 (Vd2) T
-cells may be perturbed due to elevated inflammation at the fetal maternal interface during maternal HIV infection. ILTs, which are
-thought to play important roles against pathogens in early life, are
-activated by microbial metabolites as well as by innate cytokines,
-mounting Th1-like and cytotoxic responses in the early phase of
-infection. The effect exerted by in utero HIV exposure on infant ILTs
-is unknown, as the markers required for their identification are not
-routinely included in conventional flow cytometry panels, and their
-low abundance in infant blood makes mass cytometry impractical for
-their assessment.
+Innate-like T cells (ILTs), including Natural Killer T cells (NKTs), Mucosal-associated Invariant T cells (MAITs), and Vg9Vd2 (Vd2) T cells may be perturbed due to elevated inflammation at the fetal maternal interface during maternal HIV infection. ILTs, which are thought to play important roles against pathogens in early life, are activated by microbial metabolites as well as by innate cytokines, mounting Th1-like and cytotoxic responses in the early phase of infection. The effect exerted by in utero HIV exposure on infant ILTs is unknown, as the markers required for their identification are not routinely included in conventional flow cytometry panels, and their low abundance in infant blood makes mass cytometry impractical for their assessment.
 
-To overcome these limitations, we designed a 29-color spectral
-flow cytometry panel that allows for concomitant assessment of
-ILT subsets, employing human CD1d and MR1 tetramers to identify
-NKTs and MAITs, respectively. A preliminary analysis of cord blood
-specimens from neonates in our Malawian cohort by conventional
-flow cytometry has shown an increased Vd2 cell frequency,
-differentiation, and activation in HEU-hi infants, while the frequency
-of Vd2 cells producing IFNg or both INFg and TNFa upon polyclonal
-stimulation was significantly elevated in HEU-lo infants. In a distinct
-African cohort, HEU infants also displayed elevated MAIT frequency
-at birth. We thus incorporated markers that characterize ILT subset
-activation, differentiation, and function. The spectral flow cytometry
-results that we will present will be corroborated by direct comparison
-to conventional flow cytometry data. The implementation of this
-optimized spectral panel will allow a comprehensive profiling of these
-rare subsets in infants and help highlight effects arising in context of
-HIV prenatal exposure.
+To overcome these limitations, we designed a 29-color spectral flow cytometry panel that allows for concomitant assessment of ILT subsets, employing human CD1d and MR1 tetramers to identify NKTs and MAITs, respectively. A preliminary analysis of cord blood specimens from neonates in our Malawian cohort by conventional flow cytometry has shown an increased Vd2 cell frequency, differentiation, and activation in HEU-hi infants, while the frequency of Vd2 cells producing IFNg or both INFg and TNFa upon polyclonal stimulation was significantly elevated in HEU-lo infants. In a distinct African cohort, HEU infants also displayed elevated MAIT frequency at birth. We thus incorporated markers that characterize ILT subset activation, differentiation, and function. The spectral flow cytometry results that we will present will be corroborated by direct comparison to conventional flow cytometry data. The implementation of this optimized spectral panel will allow a comprehensive profiling of these rare subsets in infants and help highlight effects arising in context of HIV prenatal exposure.
 
 # ASTMH 2021 - P369
 
@@ -124,34 +82,6 @@ HIV prenatal exposure.
 
 David Thomas Rach1, Hao-Ting Hsu2, Nginache Nampota3, Godfrey Mvula3, Franklin R. Toapanta4, Marcelo B. Sztein4, Miriam Laufer4, Kirsten E. Lyke4, Cristiana Cairo2
 
-*1 Molecular Microbiology and Immunology Graduate Program, University
-of Maryland School of Medicine, Baltimore, MD, United States, 2
-Institute for Human Virology, University of Maryland School of Medicine, Baltimore, MD, United States, 3 Blantyre Malaria Project, University of Malawi College of Medicine, Blantyre, Malawi, 4 Center for Vaccine Development and Global Health, University of Maryland School of Medicine, Baltimore, MD, United States*
+*1 Molecular Microbiology and Immunology Graduate Program, University of Maryland School of Medicine, Baltimore, MD, United States, 2 Institute for Human Virology, University of Maryland School of Medicine, Baltimore, MD, United States, 3 Blantyre Malaria Project, University of Malawi College of Medicine, Blantyre, Malawi, 4 Center for Vaccine Development and Global Health, University of Maryland School of Medicine, Baltimore, MD, United States*
 
-Each year, an estimated 1.5 million HIV+ women give birth. Increased
-access to antiretroviral therapy (ART) ensures most infants born to HIV+
-women do not contract the infection vertically, and thus remain HIV
-exposed but uninfected (HEU). During their first year of life, HEU infants
-exhibit increased rates of lower respiratory tract infections and diarrheal
-diseases, compared to HIV unexposed (HU) infants. It is hypothesized
-that exposure to HIV (and ART) before birth perturbs the developing fetal
-immune system by increasing inflammation at the fetal-maternal interface
-and induces long term effects that contribute to the increased infectious
-morbidity in HEU infants. The specific immunologic mechanisms behind
-this clinical outcome remain unclear. Among the subsets that may be
-perturbed by increased inflammation, innate-like T cells (γδ, MAIT, NKT
-cells) may play an important role against pathogens in early life. We
-hypothesize that prenatal HIV exposure results in early life activation of
-innate-like T cell subsets. Utilizing a well-characterized cohort of Malawianinfants, we compare three groups of infants born to women with: 1) HIV infection but undetectable viremia through pregnancy (HEU-lo); 2) HIV
-infection diagnosed at mid-gestation or later, with high viral loads (HEUhi); 3) no HIV infection (HU). A preliminary analysis of cord blood Vδ2 T cells suggests that production of Th1 cytokines in response to polyclonal
-stimulation is increased in HEU neonates. The frequency of TNFα+ Vδ2 T
-cells is highest in HEU-hi neonates, while the frequency of polyfunctional
-(IFNγ+TNFα+) Vδ2 cells is highest in HEU-lo neonates. These findings,
-if confirmed, would suggest that exposure to replicating maternal HIV
-results in more robust TNFα production, while prolonged exposure to
-ART in HEU-lo neonates may contribute to the observed differences in
-Vδ2 cells polyfunctionality. This study provides an opportunity to assess
-immune perturbation of innate-like subsets in HEU infants, contributing
-to our understanding of immune responses and mechanisms of increased
-infectious morbidity in this vulnerable population.
-
+Each year, an estimated 1.5 million HIV+ women give birth. Increased access to antiretroviral therapy (ART) ensures most infants born to HIV+ women do not contract the infection vertically, and thus remain HIV exposed but uninfected (HEU). During their first year of life, HEU infants exhibit increased rates of lower respiratory tract infections and diarrheal diseases, compared to HIV unexposed (HU) infants. It is hypothesized that exposure to HIV (and ART) before birth perturbs the developing fetal immune system by increasing inflammation at the fetal-maternal interface and induces long term effects that contribute to the increased infectious morbidity in HEU infants. The specific immunologic mechanisms behind this clinical outcome remain unclear. Among the subsets that may be perturbed by increased inflammation, innate-like T cells (γδ, MAIT, NKT cells) may play an important role against pathogens in early life. We hypothesize that prenatal HIV exposure results in early life activation of innate-like T cell subsets. Utilizing a well-characterized cohort of Malawianinfants, we compare three groups of infants born to women with: 1) HIV infection but undetectable viremia through pregnancy (HEU-lo); 2) HIV infection diagnosed at mid-gestation or later, with high viral loads (HEUhi); 3) no HIV infection (HU). A preliminary analysis of cord blood Vδ2 T cells suggests that production of Th1 cytokines in response to polyclonal stimulation is increased in HEU neonates. The frequency of TNFα+ Vδ2 T cells is highest in HEU-hi neonates, while the frequency of polyfunctional (IFNγ+TNFα+) Vδ2 cells is highest in HEU-lo neonates. These findings, if confirmed, would suggest that exposure to replicating maternal HIV results in more robust TNFα production, while prolonged exposure to ART in HEU-lo neonates may contribute to the observed differences in Vδ2 cells polyfunctionality. This study provides an opportunity to assess immune perturbation of innate-like subsets in HEU infants, contributing to our understanding of immune responses and mechanisms of increased infectious morbidity in this vulnerable population.
